bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value True
var fin = True
          ^BDR:33: error: not found: value False
    fin = False
          ^